# PyJSONUtilities

./: .gitignore  README.md  setup.cfg  setup.py  test.py
src/pyjsonutils/: main.py
src/pyjsonutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.json  test.py
