[metadata]
name = pyjsonutils-coffee007
version = 0.0.1
author = coffee007
author_email = pyjsonutils@gmail.com
description = A package for some common JSON functions used in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coffee007/PyJSONUtilities
project_urls =
    Bug Tracker = https://github.com/coffee007/PyJSONUtilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src